--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,7 @@
   margin: auto;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 20px;
 }
 
 .personal-information {
