--- a/src/styles/email.css
+++ b/src/styles/email.css
@@ -1,3 +1,23 @@
 .correo {
     width: 520px;
+    margin-top: 8px;
+}
+
+.actions {
+    margin-top: 8px;
+}
+
+@media screen and (max-width: 768px) {
+    .email-content {
+        flex-wrap: wrap;
+    }
+    
+    .email-content .correo {
+        width: 100%;
+    }
+
+    .email-content .actions {
+        width: 100%;
+        justify-content: center;
+    }
 }
