--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -50,7 +50,6 @@
   flex-shrink: 0;
   border-radius: 10px;
   background: #a7f3d0;
-  margin-top: 10px;
 }
 
 .looking-icon .looking {
@@ -63,7 +62,6 @@
   gap: 10px;
   flex-shrink: 0;
   background: #e0e7ff;
-  margin-top: 10px;
   border-radius: 10px;
 }
 
@@ -102,4 +100,10 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+@media screen and (max-width:768px) {
+  .container {
+    width: 80%;
+  }
 }
