--- a/src/styles/social.css
+++ b/src/styles/social.css
@@ -19,3 +19,17 @@
 .social-media .linkedin:nth-child(1) {
     margin: 0 30px 0 0;
 }
+
+@media screen and (max-width: 768px) {
+    .social-media {
+        text-align: center;
+        width: 100%;
+    }
+    .social-media .linkedin {
+        width: 100%;
+    }
+    .social-media .github {
+        width: 100%;
+        margin-top: 8px;
+    }
+}
