--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -10,4 +10,8 @@
     .icons-section {
         flex-wrap: wrap;
     }
+    .icons-section img {
+        width: 50px;
+        height: auto;
+    }
 }
