--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -53,7 +53,11 @@
   margin: 20px 0;
 }
 
-@media screen and (max-width:768px) {
+.hidden {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
   .container-project {
     flex-wrap: wrap;
   }
