--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  width: 768px;
+  width: 50%;
   margin: auto;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -101,6 +101,31 @@
   font-weight: 600;
   line-height: normal;
 }
+
+@media screen and (max-width: 1440px) {
+  .container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .container {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    width: 90%;
+  }
+}
+
 
 @media screen and (max-width:768px) {
   .container {
