--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,5 +1,5 @@
 .image-prj {
-  margin: 50px 0;
+  margin: 50px 20px 50px 0;
 }
 
 .description-container .prj-title {
@@ -78,5 +78,9 @@
   .skills-container img {
     width: 40px;
     height: auto;
+  }
+  .btnLive{
+    width: 50%;
+    margin: 30px auto;
   }
 }
