--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -17,7 +17,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 300;
-  line-height: normal;
+  line-height: 25px;
   margin: 20px 0;
 }
 
