--- a/src/styles/email.css
+++ b/src/styles/email.css
@@ -7,6 +7,16 @@
     margin-top: 8px;
 }
 
+.email-content input {
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.05);
+    color: white;
+}
+
+.email-content input::placeholder {
+    color: white; 
+}
+
 @media screen and (max-width: 768px) {
     .email-content {
         flex-wrap: wrap;
