--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,12 +5,16 @@
   font-family: "Inter", sans-serif;
 }
 
+body {
+  color: #fff;
+  background: #131922;
+}
+
 .container {
   width: 50%;
-  margin: auto;
-  background: #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin: 30px auto;
   padding: 20px;
+  /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .personal-information {
@@ -19,7 +23,7 @@
 }
 
 .personal-information .information .name {
-  color: #384a72;
+  /* color: #384a72; */
   font-family: Inter;
   font-size: 30px;
   font-style: normal;
@@ -29,7 +33,7 @@
 }
 
 .personal-information .information .description {
-  color: #5f5f5f;
+  /* color: #5f5f5f; */
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -70,7 +74,7 @@
 }
 
 .resume-icon .resume-text {
-  color: #6366f1;
+  /* color: #6366f1; */
   font-family: Inter;
   font-size: 18px;
   font-style: normal;
@@ -94,7 +98,7 @@
 .skills-container .title-skills,
 .social-container .title-social,
 .email-container .title-email {
-  color: #5fdfff;
+  /* color: #5fdfff; */
   font-family: Inter;
   font-size: 26px;
   font-style: normal;
@@ -126,8 +130,7 @@
   }
 }
 
-
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .container {
     width: 100%;
   }
