--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,9 +1,10 @@
 .image-prj {
   margin: 50px 20px 50px 0;
+  text-align: center;
 }
 
 .description-container .prj-title {
-  color: #000;
+  color: #fff;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
@@ -12,7 +13,7 @@
 }
 
 .description-container .prj-desc {
-  color: #000;
+  color: #fff;
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -41,7 +42,7 @@
   align-items: center;
   gap: 10px;
   border-radius: 8px;
-  background: #0f172a;
+  background: #20315A;
   border: none;
   color: #fff;
   font-family: Inter;
