--- a/src/styles/social.css
+++ b/src/styles/social.css
@@ -16,6 +16,10 @@
   border: 1px solid #cecece;
 }
 
+.social-media .github {
+    color: #fff;
+}
+
 .social-media .linkedin:nth-child(1) {
     margin: 0 30px 0 0;
 }
